--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div id="game-container">
         <div id="robot"></div>
         <div id="rocks"></div>
-        <div id="scoreboard">Score: 0</div>
+        <div class="scoreboard" id="scoreboard">Score: 0</div>
     </div>
     <script src="script.js"></script>
 </body>
